argocd_stuff/filebrowser_quantum/fb_qt.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser-quantum-ingress
  namespace: filebrowser-quantum
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fbqt.andreiboghean.com`)
      services:
        - name: filebrowser-quantum-filebrowser-quantum
          port: 8080
  tls:
    certResolver: default
